[tool.poetry]
name = "data-analysis-100knocks-practice"
version = "0.1.0"
description = ""
authors = ["makkenno <kota.m.2774@gmail.com>"]
readme = "README.md"
packages = [{include = "data_analysis_100knocks_practice"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
